--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>in.javahome</groupId>
-	<artifactId>myweb</artifactId>
+	<artifactId>Moni3099</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.7-SNAPSHOT</version>
-	<name>my-app</name>
+	<name>pracpipe</name>
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
@@ -27,8 +27,6 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-	
-
 <build>
     <plugins>
         <plugin>
