--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>in.javahome</groupId>
-	<artifactId>Moni3099</artifactId>
+	<artifactId>myweb</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.7-SNAPSHOT</version>
-	<name>pracpipe</name>
+	<name>my-app</name>
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
@@ -27,6 +27,20 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+	
+	</dependencies>
+	<distributionManagement>
+		 <snapshotRepository>
+		    <id>nexus</id>
+		    <url>http://172.31.15.236:8081/repository/maven-snapshots/</url>
+		 </snapshotRepository>
+		
+		<repository>
+		    <id>nexus</id>
+		    <url>http://172.31.15.236:8081/repository/maven-releases/</url>
+		</repository>
+  	</distributionManagement>
+	
 <build>
     <plugins>
         <plugin>
